@@ -1,5 +1,5 @@
-/**
- * Copyright (c) 2010-2024 Contributors to the openHAB project
+/*
+ * Copyright (c) 2010-2026 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -17,10 +17,12 @@ import static org.eclipse.jetty.http.HttpMethod.POST;
 import static org.eclipse.jetty.http.HttpMethod.PUT;
 
 import java.lang.reflect.Type;
+import java.time.Duration;
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
 import java.util.concurrent.ExecutionException;
@@ -54,6 +56,7 @@ import org.openhab.binding.boschshc.internal.exceptions.PairingFailedException;
 import org.openhab.binding.boschshc.internal.serialization.GsonUtils;
 import org.openhab.binding.boschshc.internal.services.dto.BoschSHCServiceState;
 import org.openhab.binding.boschshc.internal.services.dto.JsonRestExceptionResponse;
+import org.openhab.core.cache.ExpiringCache;
 import org.openhab.core.library.types.StringType;
 import org.openhab.core.thing.Bridge;
 import org.openhab.core.thing.Channel;
@@ -86,9 +89,15 @@ import com.google.gson.reflect.TypeToken;
 @NonNullByDefault
 public class BridgeHandler extends BaseBridgeHandler {
 
+    private final Logger logger = LoggerFactory.getLogger(BridgeHandler.class);
+
+    public static final String THING_PROPERTY_SHC_GENERATION = "shcGeneration";
+    public static final String THING_PROPERTY_API_VERSIONS = "apiVersions";
+    public static final String CONFIGURATION_PARAMETER_IP_ADDRESS = "ipAddress";
+
     private static final String HTTP_CLIENT_NOT_INITIALIZED = "HttpClient not initialized";
 
-    private final Logger logger = LoggerFactory.getLogger(BridgeHandler.class);
+    private static final Duration ROOM_CACHE_DURATION = Duration.ofMinutes(2);
 
     /**
      * Handler to do long polling.
@@ -107,12 +116,21 @@ public class BridgeHandler extends BaseBridgeHandler {
 
     /**
      * SHC thing/device discovery service instance.
-     * Registered and unregistered if service is actived/deactived.
+     * Registered and unregistered if service is activated/deactivated.
      * Used to scan for things after bridge is paired with SHC.
      */
     private @Nullable ThingDiscoveryService thingDiscoveryService;
 
     private final ScenarioHandler scenarioHandler;
+
+    private ExpiringCache<List<Room>> roomCache = new ExpiringCache<>(ROOM_CACHE_DURATION, () -> {
+        try {
+            return getRooms();
+        } catch (InterruptedException e) {
+            Thread.currentThread().interrupt();
+            return null;
+        }
+    });
 
     public BridgeHandler(Bridge bridge) {
         super(bridge);
@@ -273,6 +291,8 @@ public class BridgeHandler extends BaseBridgeHandler {
                 return;
             }
 
+            updateThingProperties();
+
             // do thing discovery after pairing
             final ThingDiscoveryService discovery = thingDiscoveryService;
             if (discovery != null) {
@@ -286,6 +306,23 @@ public class BridgeHandler extends BaseBridgeHandler {
         } catch (InterruptedException e) {
             this.updateStatus(ThingStatus.UNKNOWN, ThingStatusDetail.UNKNOWN.NONE, "@text/offline.interrupted");
             Thread.currentThread().interrupt();
+        }
+    }
+
+    private void updateThingProperties() {
+        try {
+            PublicInformation publicInformation = getPublicInformation();
+            @Nullable
+            Map<String, String> properties = new HashMap<>();
+            properties.put(Thing.PROPERTY_MAC_ADDRESS, publicInformation.macAddress);
+            properties.put(THING_PROPERTY_SHC_GENERATION, publicInformation.shcGeneration);
+            properties.put(THING_PROPERTY_API_VERSIONS, publicInformation.getApiVersionsAsCommaSeparatedList());
+            updateProperties(properties);
+        } catch (InterruptedException e) {
+            Thread.currentThread().interrupt();
+            logger.warn("Thread was interrupted while retrieving public information to update thing properties.", e);
+        } catch (BoschSHCException | ExecutionException | TimeoutException e) {
+            logger.warn("Error while retrieving public information to update thing properties.", e);
         }
     }
 
@@ -337,7 +374,7 @@ public class BridgeHandler extends BaseBridgeHandler {
         @Nullable
         BoschHttpClient localHttpClient = this.httpClient;
         if (localHttpClient == null) {
-            return Collections.emptyList();
+            return List.of();
         }
 
         try {
@@ -348,7 +385,7 @@ public class BridgeHandler extends BaseBridgeHandler {
             // check HTTP status code
             if (!HttpStatus.getCode(contentResponse.getStatus()).isSuccess()) {
                 logger.debug("Request devices failed with status code: {}", contentResponse.getStatus());
-                return Collections.emptyList();
+                return List.of();
             }
 
             String content = contentResponse.getContentAsString();
@@ -358,10 +395,10 @@ public class BridgeHandler extends BaseBridgeHandler {
             Type collectionType = new TypeToken<ArrayList<Device>>() {
             }.getType();
             List<Device> nullableDevices = GsonUtils.DEFAULT_GSON_INSTANCE.fromJson(content, collectionType);
-            return nullableDevices != null ? nullableDevices : Collections.emptyList();
+            return nullableDevices != null ? nullableDevices : List.of();
         } catch (TimeoutException | ExecutionException e) {
             logger.debug("Request devices failed because of {}!", e.getMessage(), e);
-            return Collections.emptyList();
+            return List.of();
         }
     }
 
@@ -391,7 +428,7 @@ public class BridgeHandler extends BaseBridgeHandler {
             }.getType();
             List<UserDefinedState> nullableUserStates = GsonUtils.DEFAULT_GSON_INSTANCE.fromJson(content,
                     collectionType);
-            return nullableUserStates != null ? nullableUserStates : Collections.emptyList();
+            return nullableUserStates != null ? nullableUserStates : List.of();
         } catch (TimeoutException | ExecutionException e) {
             logger.debug("Request user-defined states failed because of {}!", e.getMessage(), e);
             return List.of();
@@ -435,6 +472,24 @@ public class BridgeHandler extends BaseBridgeHandler {
         } else {
             return emptyRooms;
         }
+    }
+
+    public @Nullable List<Room> getRoomsWithCache() {
+        return roomCache.getValue();
+    }
+
+    public @Nullable String resolveRoomId(@Nullable String roomId) {
+        if (roomId == null) {
+            return null;
+        }
+
+        @Nullable
+        List<Room> rooms = getRoomsWithCache();
+        if (rooms != null) {
+            return rooms.stream().filter(r -> r.id.equals(roomId)).map(r -> r.name).findAny().orElse(null);
+        }
+
+        return null;
     }
 
     /**
@@ -887,8 +942,8 @@ public class BridgeHandler extends BaseBridgeHandler {
      * @throws ExecutionException
      * @throws TimeoutException
      */
-    public <T extends BoschSHCServiceState> @Nullable Response putState(String deviceId, String serviceName, T state)
-            throws InterruptedException, TimeoutException, ExecutionException {
+    public <T extends BoschSHCServiceState> @Nullable ContentResponse putState(String deviceId, String serviceName,
+            T state) throws InterruptedException, TimeoutException, ExecutionException {
         return sendState(deviceId, serviceName, state, PUT);
     }
 
@@ -907,13 +962,13 @@ public class BridgeHandler extends BaseBridgeHandler {
      * @throws TimeoutException
      * @throws ExecutionException
      */
-    public <T extends BoschSHCServiceState> @Nullable Response postState(String deviceId, String serviceName, T state)
-            throws InterruptedException, TimeoutException, ExecutionException {
+    public <T extends BoschSHCServiceState> @Nullable ContentResponse postState(String deviceId, String serviceName,
+            T state) throws InterruptedException, TimeoutException, ExecutionException {
         return sendState(deviceId, serviceName, state, POST);
     }
 
-    private <T extends BoschSHCServiceState> @Nullable Response sendState(String deviceId, String serviceName, T state,
-            HttpMethod method) throws InterruptedException, TimeoutException, ExecutionException {
+    private <T extends BoschSHCServiceState> @Nullable ContentResponse sendState(String deviceId, String serviceName,
+            T state, HttpMethod method) throws InterruptedException, TimeoutException, ExecutionException {
         @Nullable
         BoschHttpClient localHttpClient = this.httpClient;
         if (localHttpClient == null) {
