@@ -1,5 +1,5 @@
-/**
- * Copyright (c) 2010-2024 Contributors to the openHAB project
+/*
+ * Copyright (c) 2010-2026 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -16,7 +16,6 @@ import java.time.Duration;
 import java.time.Instant;
 import java.time.LocalDate;
 import java.time.format.DateTimeParseException;
-import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Stream;
 
@@ -126,9 +125,9 @@ public class EnergiDataServiceCommandExtension extends AbstractConsoleCommandExt
         LocalDate startDate;
         LocalDate endDate;
 
-        private int ARGUMENT_POSITION_PRICE_COMPONENT = 1;
-        private int ARGUMENT_POSITION_START_DATE = 2;
-        private int ARGUMENT_POSITION_END_DATE = 3;
+        private static final int ARGUMENT_POSITION_PRICE_COMPONENT = 1;
+        private static final int ARGUMENT_POSITION_START_DATE = 2;
+        private static final int ARGUMENT_POSITION_END_DATE = 3;
 
         ParsedUpdateParameters(String[] args) {
             if (args.length < 3 || args.length > 4) {
@@ -161,7 +160,7 @@ public class EnergiDataServiceCommandExtension extends AbstractConsoleCommandExt
 
     @Override
     public List<String> getUsages() {
-        return Arrays.asList(buildCommandUsage(SUBCMD_UPDATE + " ["
+        return List.of(buildCommandUsage(SUBCMD_UPDATE + " ["
                 + String.join("|", Stream.of(PriceComponent.values()).map(PriceComponent::toString).toList())
                 + "] <StartDate> [<EndDate>]", "Update time series in requested period"));
     }
